--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="add_to_cart">Add to cart</string>
     <string name="details_desc_text">About the product</string>
+    <string name="size_select_dialog_text">Select a size</string>
 </resources>
